big_enum_set/tests/compile-fail/variants.stderr
error: Unparseable discriminant. `#[derive(BigEnumSetType)]` only supports discriminants in the range `0 ..= 65535`.
 --> $DIR/variants.rs:6:5
  |
6 |     Variant = 0x100000,
  |     ^^^^^^^

error: Discriminant too large. `#[derive(BigEnumSetType)]` only supports discriminants in the range `0 ..= 65535`.
  --> $DIR/variants.rs:11:37
   |
11 |     _0, _1, _2, _3, _4, _5 = 65535, _6,
   |                                     ^^

error: Unrecognized discriminant. `#[derive(BigEnumSetType)]` only supports discriminants in the range `0 ..= 65535`.
  --> $DIR/variants.rs:16:5
   |
16 |     Variant = -1,
   |     ^^^^^^^

error: `#[derive(BigEnumSetType)]` may only be used on fieldless enums.
  --> $DIR/variants.rs:21:5
   |
21 |     Variant(u32),
   |     ^^^^^^^

error: `#[derive(BigEnumSetType)]` cannot be used on enums with type parameters.
  --> $DIR/variants.rs:25:19
   |
25 | enum HasTypeParams<T> {
   |                   ^

error: Too many variants for serialization into 1 bytes.
  --> $DIR/variants.rs:30:1
   |
30 | #[big_enum_set(serialize_bytes = 1)]
   | ^

error: `#[derive(BigEnumSetType)]` may only be used on enums
  --> $DIR/variants.rs:36:1
   |
36 | struct BadItemType {
   | ^^^^^^
